# api/constants.js
@@ -11,5 +11,22 @@ module.exports = {
   esaudeDatabaseUser: 'esaude',
   esaudeDatabasePass: 'eSaudeUserMySQLPassword',
 
+  esaudeApps: [{
+      id: 'platform',
+      name: 'eSaude EMR Platform',
+      containers: ['esaude-platform-mysql', 'esaude-platform-tomcat']
+    },
+    {
+      id: 'poc',
+      name: 'eSaude EMR POC',
+      containers: ['esaude-emr-poc']
+    },
+    {
+      id: 'admin',
+      name: 'eSaude Admin',
+      containers: ['esaude-admin-api', 'esaude-admin-web']
+    }
+  ],
+
   dockerSocketPath: '/var/run/docker.sock'
 }
